2004-05-05  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* src/bacon-video-widget-xine.c: (load_video_out_driver),
	(load_audio_out_driver), (bvw_config_helper_num), (setup_config),
	(setup_config_video), (video_window_translate_point),
	(bacon_video_widget_new), (bacon_video_widget_expose),
	(bacon_video_widget_set_visuals_quality),
	(bacon_video_widget_set_auto_resize),
	(bacon_video_widget_get_metadata_string):
	* src/bacon-video-widget.h: add support for the Musicbrainz CD Index
	in the video widget (Closes: #130833), make the widget compile
	without the xine-lib deprecated features, disable CDDB info
	fetching by default

2004-05-04  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>

	* configure.in: Added "sk" (Slovak) to ALL_LINGUAS.

2004-05-03  Bastien Nocera  <hadess@hadess.net>

	* help/de/Makefile.am: stop getting the German docs registered as
	C language. If you checked the docs recently, they *are* available
	in English as well ;)

2004-05-03  Bastien Nocera  <hadess@hadess.net>

	* data/totem.applications:
	* data/totem.keys: support "video/x-mpeg" mime-type, for the
	benefit of Outlook...

2004-05-02  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_set_audio_out_type): update audio out type
	selection for xine-lib 1-rc4a

2004-04-30  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (xine_error): fix a crash when
	an error occurs with mms:// (Closes: #141055)

2004-04-22  Bastien Nocera  <hadess@hadess.net>

	* src/totem-stock-icons.c: (totem_named_icons_init):
	* src/totem-video-thumbnailer.c: (add_holes_to_pixbuf):
	* src/totem.c: (main):
	* src/video-utils.c: (totem_pixbuf_mirror):
	* src/video-utils.h:
	move our gdk_pixbuf_mirror function to video-utils.[ch] and rename
	it totem_pixbuf_mirror(). Modify totem-video-thumbnailer to use
	the new function, Mirror the Play button in RTL languages, and
	simplify the Next/Prev button handling in RTL languages by using