@@ -1,3 +1,9 @@
+2004-05-06  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-pl-parser.c: (totem_pl_parser_dir_compare),
+	(totem_pl_parser_add_directory): sort the files when adding a whole
+	directory in the playlist (Closes: #131171)
+
 2004-05-05  Bastien Nocera  <hadess@hadess.net>
 
 	* NEWS: upd
